Set fixed name for ArgoCD PreSync hook job

--- a/app/templates/job.yaml
+++ b/app/templates/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: app-presync-hook-
+  name: app-presync-hook
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
