feat: Update replica count and add service monitor configuration

--- a/eso/override-values.yaml
+++ b/eso/override-values.yaml
@@ -1,4 +1,4 @@
-replicaCount: 1
+replicaCount: 2
 
 commonLabels: 
   app: external-secrets-operator
@@ -6,3 +6,6 @@ commonLabels:
 # -- If true, external-secrets will perform leader election between instances to ensure no more
 # than one instance of external-secrets operates at a time.
 leaderElect: false
+
+serviceMonitor:  
+  enabled: true
