feat: Enable leader election for external-secrets operator

--- a/eso/override-values.yaml
+++ b/eso/override-values.yaml
@@ -5,7 +5,7 @@ commonLabels:
 
 # -- If true, external-secrets will perform leader election between instances to ensure no more
 # than one instance of external-secrets operates at a time.
-leaderElect: false
+leaderElect: true
 
 serviceMonitor:
   enabled: true
